tests/neg/type_error2.scala
class Main {
  def main = {
    def foo = 1
    foo(1)
  }
}